<?xml version="1.0" encoding="utf-8"?><!--
  Copyright 2017 Valpio-K
-->
<resources>
    <string name="app_name">NaviPark</string>

    <!-- base activity -->
    <string name="register">Register</string>
    <string name="get_parking">Get parking by GPS</string>
    <string name="Login">Login</string>
    <string name="qr_location">Get parking by QR</string>

    <string name="start_updates">Start</string>
    <string name="stop_updates">Stop</string>
    <string name="clear_updates">Clear</string>

    <string name="location_settings_inadequate_warning">The location settings on the device are not
        adequate to run this sample. Fix in Settings.</string>

    <string name="permission_rationale">Location permission is needed for core functionality</string>
    <string name="permission_denied_explanation">Permission was denied, but is needed for core
        functionality.</string>
    <string name="settings">Settings</string>
    <string name="ok">OK</string>
    <string name="permission_camera_rationale">Access to the camera is needed for detection</string>
    <string name="no_camera_permission">This application cannot run because it does not have the camera permission.  The application will now exit.</string>
    <string name="low_storage_error">Face detector dependencies cannot be downloaded due to low device storage</string>
    <string name="title_activity_qr">Barcode Reader Sample</string>
    <string name="barcode_header">Get parking by QR</string>
    <string name="read_barcode">Read QR</string>
    <string name="auto_focus">Auto Focus</string>
    <string name="use_flash">Use Flash</string>
    <string name="barcode_success">Barcode read successfully</string>
    <string name="barcode_failure">No barcode captured</string>
    <string name="barcode_error">"Error reading barcode: %1$s"</string>
    <string name="action_settings">Settings</string>
    <string name="save_settings">Save</string>
    <string name="open_settings">Open</string>
    <string name="title_activity_register">Register</string>
    <string name="input_barcode">Enter a QR code</string>
    <string name="button_send">Send</string>
    <string name="qr_notice">Click Read QR to scan a QR code</string>
    <string name="button_start_timer">Start timer</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_user_name">Name</string>
    <string name="prompt_login">Login</string>
    <string name="prompt_car_number">Car number</string>
    <string name="action_sign_in">Register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="error_login_already_exists">This login already exists</string>

    <!-- Location -->
    <string name="latitude_label">Latitude:</string>
    <string name="longitude_label">Longitude:</string>
    <string name="last_update_time_label">Last updated time:</string>
    <string name="location_updated_message">Location Updated.</string>
    <string name="title_activity_login">Sign in</string>
    <string name="title_location">Get Parking by GPS</string>
    <string name="button_detect_park">Detect parking</string>

    <string name="AL">Sasha_Grey</string>
    <string name="AP">egor007</string>
	
	<!-- Payment -->
	<string name="app_name_datatrans">Datatrans Test App</string>
    <string name="button_payment">Payment</string>

    <!-- Action bar messages -->
    <string name="action_autofill">Fill in test data</string>

    <!-- Datatrans payment library messages -->
    <string name="nw_error_button_cancel">Cancel</string>
    <string name="nw_error_button_retry">Try again</string>
    <string name="nw_error_message">A connection error occurred. Please try again.</string>
    <string name="nw_error_title">Connection Error</string>
    <string name="nw_indicator_message">Transmitting...</string>

    <string name="authorisation_method">Authorisation method</string>
    <string name="authorisation_choose">Choose</string>

    <string name="cc_details_ok">Pay</string>

    <string-array
        name="authorisation_methods">
        <item>Redirect mode</item>
        <item>Scan card (card.io)</item>
    </string-array>

    <!--Error email report-->
    <string name="crash_toast_text">Error Report</string>

</resources>
