<?xml version="1.0" encoding="utf-8"?>
<!--
     Copyright (C) 2017 Valpio-K.
-->

<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:verticalScrollbarPosition="right"
    tools:context="com.valpiok.NaviPark.MainActivity">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@drawable/toolbar_bg"
            android:textAlignment="center"
            app:popupTheme="@style/AppTheme.PopupOverlay"
            android:weightSum="1">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:background="@drawable/ic_launcher"
                android:layout_gravity="right"
                android:layout_marginRight="20dp"
                />

        </android.support.v7.widget.Toolbar>


    </android.support.design.widget.AppBarLayout>

    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/scrollView1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:weightSum="1"
        android:background="@drawable/restaurant"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        >

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/base"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="vertical"
            >

            <TextView
                android:id="@+id/main_text"
                android:layout_width="351dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.03"
                android:textSize="25sp"
                android:textStyle="italic"
                android:gravity="center"
                android:text="@string/barcode_header"></TextView>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <AutoCompleteTextView
                    android:id="@+id/barcode_value"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/input_barcode"
                    android:inputType="text"
                    android:maxLines="1" />

            </android.support.design.widget.TextInputLayout>

            <android.support.v7.widget.AppCompatButton
                android:id="@+id/check_parking"
                android:layout_width="251dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/button_send"
                android:textColor="#fff"
                app:backgroundTint="#86BB30"/>

            <android.support.v7.widget.AppCompatButton
                android:id="@+id/read_barcode"
                android:layout_width="251dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/read_barcode"
                android:textColor="#fff"
                app:backgroundTint="#86BB30"/>

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/use_flash"
                android:id="@+id/use_flash"
                android:layout_alignTop="@+id/auto_focus"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                android:checked="false" />


            <TextView
                android:id="@+id/status_message"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/qr_notice"
                android:textSize="18sp" />

        </LinearLayout>

    </ScrollView>

</android.support.design.widget.CoordinatorLayout>