<?xml version="1.0" encoding="utf-8"?>
<!--
     Copyright (C) 2017 Valpio-K.
-->

<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context="com.valpiok.NaviPark.MainActivity">

    <!--<include android:id="@+id/toolbar" layout="@layout/toolbar" />-->

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@drawable/toolbar_bg"
            android:textAlignment="center"
            app:popupTheme="@style/AppTheme.PopupOverlay"
            android:weightSum="1">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:background="@drawable/ic_launcher"
                android:layout_gravity="right"
                android:layout_marginRight="20dp"
                />

        </android.support.v7.widget.Toolbar>


    </android.support.design.widget.AppBarLayout>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/base"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:weightSum="1"
        android:background="@drawable/restaurant"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <TextView
            android:id="@+id/main_text"
            android:layout_width="351dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.03"
            android:textSize="25sp"
            android:textStyle="italic"
            android:gravity="center"
            android:text="Main"></TextView>

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/register_button"
            android:layout_width="251dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/register"
            android:textColor="#fff"
            app:backgroundTint="#86BB30"/>

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/location_button"
            android:layout_width="251dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/get_parking"
            android:textColor="#fff"
            app:backgroundTint="#86BB30"/>

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/login_button"
            android:layout_width="251dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/Login"
            android:textColor="#fff"
            app:backgroundTint="#86BB30"/>

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/location_qr_button"
            android:layout_width="251dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/qr_location"
            android:textColor="#fff"
            app:backgroundTint="#86BB30"/>

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/payment_button"
            android:layout_width="251dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/button_payment"
            android:textColor="#fff"
            app:backgroundTint="#86BB30"/>


    </LinearLayout>
</android.support.design.widget.CoordinatorLayout>
